# python_langchain_gemini_azure

./: .env.example  .gitignore
CH10/: rag.html  requirements.txt
CH10/demo1/: README.md
CH10/demo1/demo1/: demo10-1_gemini.py  demo10-2_gemini.py
CH11/demo1/: docker.txt
CH14/: requirements.txt
CH14/demo1/: README.md
CH14/demo1/demo1/: demo14-1_gemini.py  demo14-2_gemini.py  demo14-3_gemini.py  demo14-4_gemini.py  demo14-5_gemini.py
CH15/ch15-1/: README.md
CH15/ch15-1/ch15-1/: rag.py  requirements.txt
CH15/ch15-1/langserveapp/: Dockerfile  README.md  requirements.txt
CH5/demo1/: README.md  pyproject.toml
CH5/demo1/demo1/: demo5-1_gemini.py  demo5-2_gemini.py  demo5-3_gemini.py  demo5-4_gemini.py  demo5-5_gemini.py  demo5-6_gemini.py  demo5-7_gemini.py  demo5-8_gemini.py
CH6/ch6/: README.md  langchain.db  pyproject.toml
CH8/: README.md  requirements.txt  venv_setup.md
CH8/8-2/: app.py
CH8/8-3/: app.py
CH8/8-4/: app.py
CH8/8-5/: app.py
CH8/8-6/: app.py
CH8/Project/: README.md  streamlit_app.py
LLM_app/: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_app_v1.py
VibeCoding/: 1.Spec_kit.md  2.OpenSpec.md  3.DeepWiki-Open.md  4.gemini-fullstack.md  README.zh-tw.md  parselectagent.md
VibeCoding_output/: partselect-agent_wiki.md
VibeCoding_output/deepwiki-open/: $.env.example  Dockerfile-ollama-local  Ollama-instruction.md  README.es.md  README.fr.md  README.ja.md  README.kr.md  README.md  README.pt-br.md  README.ru.md  README.vi.md  README.zh-tw.md  README.zh.md
(+54 files in other folders)
